# pythocron

./: .dockerignore  .gitignore  Dockerfile  README.md  app.json  default.Dockerfile  docker-compose.yml  docker-image.yml  heroku.Dockerfile  heroku.base.Dockerfile  heroku.yml
.github/: dependabot.yml
.github/workflows/: default.yml  docker-image.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/pythocron/: config.py  main.py  pythocron.py  schemas.py  utils.py
deployment/: default.nginx.conf  default.run.sh  dockerhub.docker-compose.yml  heroku.nginx.conf  heroku.nginx.conf.template  heroku.run.sh
frontend/: .dockerignore  Dockerfile
frontend/pythocron/: .env  package.json
frontend/pythocron/public/: index.html
frontend/pythocron/src/: AddPythocron.js  App.js  CodeSection.js  Cron.js  CronExample.js  CronSection.js  EditPythocron.js  LogsSection.js  MenuContents.js  NoMatch.js  TopAppBar.js  index.js  utils.js
