[tool.poetry]
name = "pythocron"
version = "0.1.0"
description = "pythocron"
authors = ["Oskar Korczak <oskar.korczak@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
